--- a/Narovonna.Rmd
+++ b/Narovonna.Rmd
@@ -2,6 +2,11 @@
 title: "Narovonna"
 output: html_document
 date: '2022-05-30'
+knit: (function(input_file, encoding) {
+    out_dir <- 'docs';
+    rmarkdown::render(input_file,
+      encoding=encoding,
+      output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 ## Analiza danych dotyczących ataków z użyciem broni palnej w Zjednoczonych Stanach Ameryki na przestrzeni lat 2013-2022
